# inaki

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  config.example.yaml  config.yaml  main.py  pyproject.toml  update.sh
adapters/broadcast/: tcp.py
adapters/inbound/: turn_dispatch.py
adapters/inbound/cli/: cli_runner.py  knowledge_cli.py  scheduler_cli.py  setup_cli.py  setup_wizard.py
adapters/inbound/daemon/: runner.py
adapters/inbound/rest/: app.py  schemas.py
adapters/inbound/setup_tui/: _cambios.py  _schema.py  _schema_tree.py  app.py  choices.py  di.py
adapters/inbound/telegram/: bot.py  broadcast.py  commands.py  (+4 more)
adapters/outbound/: daemon_client.py  scope_registry_adapter.py
config/: global.example.yaml  global.secrets.yaml.example  global.yaml
config/agents/: coordinator.example.yaml  dev.secrets.yaml.example  dev.yaml  general.yaml
core/domain/: errors.py  skip_marker.py
core/ports/: config_repository.py
core/services/: crypto_service.py
core/use_cases/: _json_extract.py  _result_parser.py  _tool_loop.py  _turn_pipeline.py  consolidate_all_agents.py  consolidate_memory.py  manage_knowledge.py  process_photo.py  reconcile_memory.py  run_agent.py  run_agent_one_shot.py  schedule_task.py
docs/: broadcast-concurrency.md  broadcast-smoke.md  config-reference.md  configuracion.md  discovered-failures.md  estructura.md  face-recognition.md  flujo_canal_llm.md  flujo_ejecucion.md  inaki_spec.md  inaki_spec_v2.md  knowledge.md  modelo_de_datos.md  prompt_builder.md  rag-mechanism.md  scheduler-spec.md  semantic-routing.md  setup-tui-redesign-plan.md  setup-tui-smoke.md  tool_exchange_calendar.md  tools_y_skills.md  world_state_implementation.md
ext/get_world_state/: get_world_state.yaml  manifest.py
inaki/: __init__.py  __main__.py  cli.py  daemon_runner.py  knowledge_cli.py  scheduler_cli.py  setup_cli.py
infrastructure/: config.py  config_docs.py  config_loader.py  config_schema.py  container.py  daemon_reloader.py  home.py  logging_setup.py  scheduler_reconciler.py
infrastructure/factories/: embedding_factory.py  llm_factory.py  transcription_factory.py
old/: exchange_calendar.py  patch_file.py  read_file.py  write_file.py
old/exchange_calendar/: __init__.py  calendar_env.py  engine.py  notifications.py  reader.py  time_utils.py  tracing.py  writer.py
scripts/: update_world_state.py
skills/: shell.yaml  web_search.yaml
systemd/: inaki.service  install.sh
tests/: conftest.py
tests/integration/: test_admin_server.py  test_background_delegation_e2e.py  test_broadcast_trigger_end_to_end.py  test_broadcast_two_agents.py  test_cli_chat_via_rest.py  test_cli_knowledge.py  test_embedding_cache_integration.py  test_history_schema.py  test_run_agent_knowledge_pre_fetch.py  test_telegram_broadcast_egress.py
tests/unit/: test_architecture.py  test_cli_send_command.py  test_cli_tool_command.py  test_main_daemon_client.py
(+553 files in other folders)
