[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inaki"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "structlog>=24.0",
    "python-telegram-bot>=21.0",
    "markdown-it-py>=3.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "croniter>=2.0",
    "exchangelib>=5.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.0",
    "tzlocal>=5.0",
    "pypdf>=4.0",
    "textual>=0.80",
    "ruamel.yaml>=0.18",
    "Pillow>=10.0",
    "insightface",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
inaki = "inaki.cli:app"

[tool.setuptools.packages.find]
include = ["inaki*", "core*", "adapters*", "infrastructure*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.mypy.overrides]]
# Textual stubs son incompletos:
#   - Las subclases de Screen no resuelven `push_screen` en type-check,
#     pero lo heredan en runtime vía el framework App.
#   - Button.variant exige Literal[...], pero pasamos strings dinámicos
#     para alternar estilo primary/default según el estado del widget.
module = "adapters.inbound.setup_tui.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
# ruamel.yaml no expone py.typed marker — third-party sin stubs.
module = "ruamel.*"
ignore_missing_imports = true
